--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="">
+    <head>
+        <meta charset="UTF-8" />
+        <link
+            rel="icon"
+            href="/favicon.ico"
+        />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1.0"
+        />
+        <title>一个很莫名其妙的网站</title>
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>一个很莫名其妙的网站</title>
-</head>
-
-<body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-</body>
-
+    <body>
+        <div id="app"></div>
+        <script
+            type="module"
+            src="/src/main.ts"
+        ></script>
+    </body>
 </html>
